deploy-dev-tools.yml
##################################################################################################
# Dev Tools service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: dev-tools
  labels:
    app: dev-tools
    service: dev-tools
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: dev-tools
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-tools-c1
  labels:
    app: dev-tools
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev-tools
  template:
    metadata:
      labels:
        app: dev-tools
        version: 1.1.1
        config: v1
    spec:
      containers:
      - name: dev-tools
        image: dev-tools:1.1.1
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /config
      volumes:
      - name: config-volume
        configMap:
          name: devtools-config-v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-tools-c2
  labels:
    app: dev-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-tools
  template:
    metadata:
      labels:
        app: dev-tools
        version: 1.1.1
        config: v2
    spec:
      containers:
      - name: dev-tools
        image: dev-tools:1.1.1
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /config
      volumes:
      - name: config-volume
        configMap:
          name: devtools-config-v2
