gateway-dev-tools.yml
# istioctl dashboard kiali

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: devtools
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway 
  http:
  - match:
    - uri:
        prefix: /devtools
    route:
    - destination:
        host: dev-tools
        port:
          number: 8080
